# losslessly

./: Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  dist-workspace.toml
examples/: gifcmp.rs  gifgen.rs  jpegcmp.rs  svgcmp.rs  webpcmp.rs  webpgen.rs
src/: gif.rs  jpeg.rs  main.rs  png.rs  svg.rs  webp.rs
