[package]
name = "iopt"
version = "0.1.0"
edition = "2024"
description = "Lossless image optimizer for CI pipelines and pre-commit hooks"
license = "MIT"
keywords = ["image", "optimization", "png", "jpeg", "ci"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.186"
mozjpeg-sys = { version = "2.2.3", features = ["jpegtran"] }
oxipng = { version = "10.1.1", default-features = false, features = ["parallel", "zopfli"] }
rayon = "1.12.0"
walkdir = "2.5.0"

[profile.release]
lto = true
strip = true
