[package]
name = "iopt"
version = "0.1.0"
edition = "2024"
description = "Lossless image optimizer for CI pipelines and pre-commit hooks"
license = "MIT"
keywords = ["image", "optimization", "png", "jpeg", "ci"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
gif = "0.14.2"
gif-dispose = "6.0.0"
imgref = "1.12.2"
libc = "0.2.186"
mozjpeg-sys = { version = "2.2.3", features = ["jpegtran"] }
oxipng = { version = "10.1.1", default-features = false, features = ["parallel", "zopfli"] }
oxvg_ast = { version = "0.0.5", features = ["roxmltree"] }
oxvg_optimiser = "0.0.5"
rayon = "1.12.0"
rgb = "0.8.53"
walkdir = "2.5.0"
webp = { version = "0.3.1", default-features = false }

[profile.release]
lto = true
strip = true

[dev-dependencies]
resvg = "0.47.0"
